--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 ---
+title: Home
+layout: home
 ---
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>First try</title>
-  </head>
-  <body>
-    {% include about/about.html %}
-    {% include projects/projects.html %}
-    {% include essays/essays.html %}
-  </body>
-</html>
+
+{% include about/about.html %}
+{% include projects/projects.html %}
+{% include essays/essays.html %}
